# NEWWAY

./: CLAUDE.md  DEVELOPMENT.md  README.md
analysis/: REPO_AUDIT_2026-02-27.md
analysis/mode2_loss/: run_carla_sionna_nrv2x.sh  start_carla_ready.sh
analysis/scenario_runs/: LOG_AUDIT_2026-02-27.md  README.md  analyze_all_logs.py  analyze_phy_safety.py  build_collision_causality_report.py  build_drop_decision_timeline.py  build_valid_scenario_story_plots.py  export_diploma_timeline.py  log_audit_summary_2026-02-27.csv  thesis_plot_sweep.py  thesis_unified_report.py
analysis/vkr/: CHAPTER_DRAFT.md
scenarios/: README.md
scenarios/thesis-experiments/: README.md  run_all.sh  run_experiment_1_intersection.sh  run_experiment_2_platoon.sh  run_experiment_3_nr_params.sh  run_experiment_4_density.sh  run_experiment_5_tech_comparison.sh
scenarios/v2v-emergencyVehicleAlert-nrv2x/: README.md  run.sh
src/automotive/: CMakeLists.txt
src/automotive/aux-files/: current-mode.txt
src/automotive/examples/: CMakeLists.txt  v2v-emergencyVehicleAlert-nrv2x.cc
src/automotive/examples/sumo_files_intersection/: intersection.net.xml  intersection.rou.xml  intersection.sumo.cfg
src/automotive/examples/sumo_files_platoon/: platoon.rou.xml  platoon.sumo.cfg  (+1 more)
src/carla/: CMakeLists.txt
src/carla/model/: OpenCDAClient.cc
src/carla/proto/: carla.grpc.pb.cc  carla.grpc.pb.h  carla.pb.cc  carla.pb.h  carla_pb2.py  carla_pb2_grpc.py
src/traci/model/: sumo-TraCIAPI.cc  sumo-TraCIAPI.h
valid_scenario/: README.md  VKR_SCENARIO_TEXT.md  run.sh  run_intersection.sh
(+12 files in other folders)
